@@ -149,7 +149,8 @@ Version 2.3.0 - The river knows.
 		* Fixed splitter bars in download and share view
 		* Allowed creation of ED2K source links in KAD-only mode
 		* Make friendlist in chat window resizable
-		
+		* Removed lag (caused by language pref) when opening preferences dialog
+
 	Vollstrecker:
 		* Unify copyright lines
 		* Fixed clean and distclean targets for make
